<resources>
    <string name="app_name">The Name Quiz</string>
    <string name="quiz">Quiz</string>
    <string name="database">Database</string>
    <string name="add">Add</string>
    <string name="title_activity_add">AddActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="textview1">TextView</string>
    <string name="peter_simonsen">Peter Simonsen</string>
    <string name="button">Button</string>
    <string name="textview2">TextView</string>
    <string name="add_person">Add person</string>
    <string name="write_name">Write name</string>
    <string name="existing">Existing image</string>
    <string name="image">Image</string>
    <string name="score">Score</string>
    <string name="enter_name">Enter name:</string>
    <string name="quiz2">Quiz</string>
    <string name="hint2">hint2</string>
    <string name="button_photo">button Photo</string>
    <string name="buttonphoto">buttonPhoto</string>
    <string name="backtodb">backToDb</string>
    <string name="addActivity">addActivity</string>
    <string name="save_pref_name">Save pref name</string>
    <string name="change_pref_name">Change pref name</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="show_pref_name">Show pref name</string>
    <string name="back">Back</string>
    <string name="your_score">Your score</string>
    <string name="submitanswer">SubmitAnswer</string>
    <string name="restartbtn">restartBtn</string>
    <string name="add_activity">Add activity</string>
    <string name="photo_image">photo image</string>
    <string name="add_photo">Add photo</string>
    <string name="name">Name</string>
    <string name="addactivity">addActivity</string>
    <string name="go_to_database">Go to database</string>
    <string name="quiz_time">Quiz time!</string>
    <string name="write_answere_here">Write answere here</string>
    <string name="submit_answer">Submit answer</string>
    <string name="restart_quiz">Restart quiz!</string>
    <string name="todo">TODO</string>
    <string name="person">Person</string>
    <string name="deletepic">deletePic</string>
    <string name="imageviewname">imageViewName</string>
    <string name="imageviewquiz">imageViewQuiz</string>
    <string name="add2">Add</string>
    <string name="delete">Delete</string>
    <string name="delete2">Delete</string>
</resources>