<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_time"
        android:textAlignment="center"
        android:textSize="40sp"/>

    <ImageView
        android:id="@+id/imageViewQuiz"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/your_score"/>

    <TextView
        android:id="@+id/textPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/inputAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/write_answere_here"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:textAlignment="center"
        android:id="@+id/submitAns"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:text="@string/submit_answer"
        android:onClick="submitAnswer"/>

    <Button
        android:id="@+id/restartBtn"
        android:textAlignment="center"
        android:layout_width="190dp"
        android:layout_height="100dp"
        android:text="@string/restart_quiz"
        android:visibility="invisible"
        android:onClick="restart"/>

    <TextView
        android:id="@+id/textFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>